--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HTF - Challenge 4</title>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
 </head>
